fixes top/bottom chart alignment

--- a/datausa/assets/scss/elements/_embed.scss
+++ b/datausa/assets/scss/elements/_embed.scss
@@ -23,6 +23,7 @@ body.embed {
 
         .viz:not(.mini), .viz.full-width {
           height: 100% !important;
+          max-height: 100% !important;
           min-height: 100% !important;
         }
 
