--- a/datausa/static/css/site.css
+++ b/datausa/static/css/site.css
@@ -4796,6 +4796,7 @@ body.story .profile-section {
               -ms-flex: 1 1 200px;
               flex: 1 1 200px;
               margin-left: 0;
+              max-height: 200px;
               min-height: 200px; }
     body.profile .profile-section .topic .content,
     body.map .profile-section .topic .content,
@@ -5608,6 +5609,7 @@ body.embed {
             body.embed .profile-section .topic .content .viz:not(.mini),
             body.embed .profile-section .topic .content .viz.full-width {
               height: 100% !important;
+              max-height: 100% !important;
               min-height: 100% !important; }
 body.map {
   background-color: #cdd1d3;
